add FindUserByNameAndPWD
